syntax = "proto3";

option csharp_namespace = "Proto.Requests.Sprints";

package contract.requests;

import "google/protobuf/timestamp.proto";

message SprintProto {
  string sprint_id = 1;
  string name = 2;
  google.protobuf.Timestamp start = 3;
  google.protobuf.Timestamp end = 4;
}

message GetActiveSprintRequestProto {}

message GetAllSprintsRequestProto {}

message SprintListProto {
  repeated SprintProto sprints = 1;
}

service SprintRequestService {
  rpc GetActiveSprint(GetActiveSprintRequestProto) returns (SprintProto);
  rpc GetAllSprints(GetAllSprintsRequestProto) returns (SprintListProto);
}
