syntax = "proto3";
import "DTO/sprint.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.Sprints";

message GetActiveSprintRequestProto {
  TraceDataProto traceData = 1;
}

message GetAllSprintsRequestProto {
  TraceDataProto traceData = 1;
}

message SprintListProto {
  repeated SprintProto sprints = 1;
}

service SprintProtoRequestService {
  rpc GetActiveSprint(GetActiveSprintRequestProto) returns (SprintProto);
  rpc GetAllSprints(GetAllSprintsRequestProto) returns (SprintListProto);
}
